--- a/public/css/style.css
+++ b/public/css/style.css
@@ -129,4 +129,107 @@ html, body {
   border-radius: 50px;
 }
 
+.centralContainer {
+  display: grid;
+  grid-template-columns: 1fr 4fr 1fr;
+  grid-template-rows: auto;
+  min-height: 100%;
+  background: #212121;
+  column-gap: 10px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.centralContainer .art-left {
+  background: #212121;
+  grid-column: 1/1;
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  border-radius: 50px;
+}
+.centralContainer .art-central {
+  background: #212121;
+  padding: 40px;
+  grid-column: 2/4;
+  grid-row: 1;
+  box-shadow: 3px 3px 20px #000 inset, -3px -3px 20px #424242 inset;
+  border-radius: 50px;
+}
+
+.contact-us {
+  background: #212121;
+  color: #000;
+  font-size: large;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  display: flex;
+  flex-flow: column wrap;
+  justify-content: center;
+  align-items: center;
+  height: 700px;
+  margin: auto;
+  border-radius: 15px;
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  padding: 10px;
+}
+.contact-us .cadre {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding: 10px;
+  box-shadow: 3px 3px 20px #000 inset, -3px -3px 20px #424242 inset;
+  border-radius: 15px;
+}
+.contact-us .pseudo-container {
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  padding: 15px;
+  border-radius: 15px;
+  margin: 15px;
+}
+.contact-us .password-container {
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  padding: 15px;
+  border-radius: 15px;
+  margin: 15px;
+}
+.contact-us .confirm-container {
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  padding: 15px;
+  border-radius: 15px;
+  margin: 15px;
+}
+.contact-us .email-container {
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  padding: 15px;
+  border-radius: 15px;
+  margin: 15px;
+}
+.contact-us #submit {
+  cursor: pointer;
+  background: #212121;
+  color: #000;
+  font-size: 1.5rem;
+  border: none;
+  border-radius: 15px;
+  box-shadow: 3px 3px 20px #000 inset, -3px -3px 20px #424242 inset;
+}
+.contact-us #submit:hover {
+  background: #212121;
+  color: #424242;
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  transition: 2s;
+  transform: scale(0.5);
+}
+
+input {
+  background: #303030;
+  color: white;
+  border: none;
+  box-shadow: 3px 3px 20px #000, -3px -3px 20px #424242;
+  width: 90%;
+  padding: 10px;
+  margin-top: 8px;
+  border-radius: 10px;
+}
+input:focus {
+  outline: none;
+}
+
 /*# sourceMappingURL=style.css.map */
