--- a/sass/pages/contact.scss
+++ b/sass/pages/contact.scss
@@ -105,3 +105,8 @@
                 outline:none;
             }
         }
+
+        .test {
+            background: red;
+            font-size: 2rem;
+        }
